Fix swagger roles issue
